k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iitd
  labels:
    app: iitd
    managed: gitops
